--- a/src/app/pages/checkout-error/checkout-error.component.html
+++ b/src/app/pages/checkout-error/checkout-error.component.html
@@ -3,7 +3,7 @@
 <img src="../../../assets/iconos/error.png" width="80%" alt="">
     </div>
     <div class="texto">
-  <p>Revise los datos de la tarjeta.  Hubo un error</p>
+  <p>Check the card details. There was an error.</p>
     </div>
    </div>
   
