--- a/src/app/pages/thankyou/thankyou.component.html
+++ b/src/app/pages/thankyou/thankyou.component.html
@@ -8,10 +8,10 @@
      <div class="derecha">
         <img src="../../../assets/iconos/001-cash-register.png" width="20%" alt="">
         <i style="font-size: 20px;color:white" class="bi-checkout"></i>
-        <h1>¡Gracias por su compra!</h1>
-      <p>Le agradecemos por elegir nuestra tienda en línea. Estamos seguros de que disfrutará de su compra.</p>
-      <p>Se ha enviado un correo electrónico de confirmación a la dirección proporcionada. Si tiene alguna pregunta o problema, no dude en ponerse en contacto con nosotros.</p>
-      <p>¡Gracias de nuevo por elegir nuestra tienda!</p>
+        <h1>{{"THANKYOU.GRACIAS" | translate}}</h1>
+      <p>{{"THANKYOU.AGRADECEMOS" | translate}}</p>
+      <p>{{"THANKYOU.ENVIADO" | translate}}</p>
+      <p>¡{{"THANKYOU.DENUEVO" | translate}}</p>
       <img src="../../../assets/iconos/002-online-shopping.png" width="30%" alt="">
      </div>
     </div>
