first cambio carrito7

--- a/src/app/components/jumbotron/jumbotron.component.html
+++ b/src/app/components/jumbotron/jumbotron.component.html
@@ -27,7 +27,7 @@
         </div>
       </div>
 
-      <a class="btn btn-primary btn-lg" routerLink="productos">Ver mas</a>
+      <a class="btn btn-primary btn-lg" routerLink="productos">See more...</a>
     </div>
   </div>
 
