--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
                     <a class="nav-link" href="#">Features</a>
                 </li>
                 <li class="nav-item">
-                    <a  data-toggle="dropdown"   class="nav-link" href="#descubre">Descubre</a>
+                    <a  data-toggle="dropdown"   class="nav-link" href="#descubre">Discover</a>
                 </li>
                 <li class="nav-item ">
                     <a  data-toggle="dropdown" data-bs-target="#navbarNav" data-bs-toggle="collapse"   class="nav-link" routerLink="/shop">Shop</a>
