--- a/src/app/components/cartel/cartel.component.html
+++ b/src/app/components/cartel/cartel.component.html
@@ -4,7 +4,7 @@
         <div [@entrada-izq]="isOpen ? 'in' : 'out'" (scroll-in)="activate()" (scroll-out)="desactivate()"  class="jumbotron col-md-8 container-fluid py-5">
             <p class=" mx-auto display-5 fw-bold text-white">{{"HOME.LASI" | translate}}</p>
              <p class="text-white mt-5">Sivaldo Filho</p>   
-            <button class="btn btn-primary btn-lg" type="button">Start</button>
+             <a class="btn btn-primary" routerLink="/shop">Start</a>
         </div>
     </div>
 </div>
