--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
         <br>
       <h2>{{"HOME.COMP" | translate}}</h2>
       <p>{{"HOME.SOST" | translate}}</p>
-        <button class="btn btn-primary" >Start</button>
+      <a class="btn btn-primary" routerLink="/shop">Start</a>
 
     </div>
  
