--- a/src/app/pages/formulario/formulario.component.html
+++ b/src/app/pages/formulario/formulario.component.html
@@ -246,9 +246,9 @@
         </div>
       </div>
       <div class="card" style="width: 18rem; color: black">
-        <h5>Item : {{ cartService.getTotalPrice() }}</h5>
-        <h5>shipment : {{ portes }}</h5>
-        <h5>Total to pay : {{ cartService.totalPagoCompra }}</h5>
+        <h5>Item : {{ cartService.getTotalPrice() | currency: 'EUR'}}</h5>
+        <h5>shipment : {{ portes | currency: 'EUR' }}</h5>
+        <h5>Total to pay : {{ cartService.totalPagoCompra  | currency: 'EUR'}}</h5>
       </div>
 
       <h2>Collection Payment Intent</h2>
