modificado validacion formulario

--- a/src/app/pages/formulario/formulario.component.css
+++ b/src/app/pages/formulario/formulario.component.css
@@ -1,6 +1,6 @@
 
 
-::placeholder {
-    color: red;
-    opacity: 1; /* Firefox */
+.namePayment::placeholder {
+    color: red !important;
+    opacity: 0.5; /* Firefox */
   }
