--- a/src/app/components/jumbotron/jumbotron.component.html
+++ b/src/app/components/jumbotron/jumbotron.component.html
@@ -28,6 +28,8 @@
       </div>
 
       <a class="btn btn-primary btn-lg" routerLink="productos">See more...</a>
+      <br>
+      <a class="boton-tienda btn btn-primary btn-lg mt-3" routerLink="shop">Shop</a>
     </div>
   </div>
 
