--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -14,6 +14,7 @@
 .imagenes{
     position: relative;
     width: 100%;
+    
 }
 
 .derecha {
@@ -69,7 +70,7 @@ p{
       
        width: 100%;
         /* margin: auto; */
-        margin-top: 70px !important;
+        margin-top: 20px !important;
  padding-left: 60px;
     
     }
@@ -77,9 +78,12 @@ p{
        
        width: 100%;
         /* margin: auto; */
-        margin-top: 70px !important;
+        margin-top: 20px !important;
         padding-left: 60px;
 
     
+    }
+    .boton{
+        margin-top: 20px;
     }
   }
