modificado header y jumbotron5

--- a/src/app/components/cartel/cartel.component.css
+++ b/src/app/components/cartel/cartel.component.css
@@ -8,3 +8,7 @@
     background-attachment: fixed;
    font-family: 'Quintessential', cursive;;
 }
+.boton{
+    padding:10px 30px;
+    font-size: 1.5em;
+}
