--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -49,7 +49,7 @@ p{
 }
 .boton{
     margin-top: 40px;
-    background-color: transparent;
+    background-color: black;
     padding:10px 40px;
     font-size: 1.5em;
 }
