--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark fixed-toppp ">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top ">
     <div class=" container-fluid">
         <img src="../../../assets/images/afri-agraria2.png" alt="" width="100" height="70"
             class="d-inline-block align-text-top">
